Fix non-visible navbar toggle icon bars in high contrast theme

--- a/less/navbar.less
+++ b/less/navbar.less
@@ -213,6 +213,7 @@
     width: 22px;
     height: 2px;
     border-radius: 1px;
+    border: 1px solid transparent;
   }
   .icon-bar + .icon-bar {
     margin-top: 4px;
